polls_k/base/polls-deployment.yaml
---
# Source: polls/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polls
  labels:
    app.kubernetes.io/name: polls
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: polls
  template:
    metadata:
      labels:
        app.kubernetes.io/name: polls
        app.kubernetes.io/instance: polls
    spec:
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: polls
          securityContext:
            {}
          image: "quay.io/blueshoe/java-spring-example:0.0.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 1m
              memory: 64Mi
