polls_k/base/polls-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: polls
  labels:
    app.kubernetes.io/name: polls
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: polls
    app.kubernetes.io/instance: polls
